// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis [common] example testing should match snapshot(s) for Default 1`] = `
<svg
  height="100"
  width="500"
>
  <g
    transform="translate(20, 50)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,6V0H440V6"
      />
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          0
        </text>
      </g>
      <g
        transform="translate(88, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          20,000
        </text>
      </g>
      <g
        transform="translate(176, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          40,000
        </text>
      </g>
      <g
        transform="translate(264, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          60,000
        </text>
      </g>
      <g
        transform="translate(352, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          80,000
        </text>
      </g>
      <g
        transform="translate(440, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          100,000
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot(s) for DiagonalText 1`] = `
<div>
  <div>
    <p>
      top
    </p>
    <svg
      height="100"
      width="500"
    >
      <g
        transform="translate(20, 50)"
      >
        <g
          class="lucid-Axis"
        >
          <path
            class="lucid-Axis-domain"
            d="M0,-6V0H440V-6"
          />
          <g
            transform="translate(0, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              0
            </text>
          </g>
          <g
            transform="translate(88, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              20,000
            </text>
          </g>
          <g
            transform="translate(176, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              40,000
            </text>
          </g>
          <g
            transform="translate(264, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              60,000
            </text>
          </g>
          <g
            transform="translate(352, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              80,000
            </text>
          </g>
          <g
            transform="translate(440, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="-6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="-9"
            >
              100,000
            </text>
          </g>
        </g>
      </g>
    </svg>
  </div>
  <div>
    <p>
      bottom
    </p>
    <svg
      height="100"
      width="500"
    >
      <g
        transform="translate(20, 50)"
      >
        <g
          class="lucid-Axis"
        >
          <path
            class="lucid-Axis-domain"
            d="M0,6V0H440V6"
          />
          <g
            transform="translate(0, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              0
            </text>
          </g>
          <g
            transform="translate(88, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              20,000
            </text>
          </g>
          <g
            transform="translate(176, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              40,000
            </text>
          </g>
          <g
            transform="translate(264, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              60,000
            </text>
          </g>
          <g
            transform="translate(352, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              80,000
            </text>
          </g>
          <g
            transform="translate(440, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="0"
              y2="6"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="9"
            >
              100,000
            </text>
          </g>
        </g>
      </g>
    </svg>
  </div>
  <div>
    <p>
      right
    </p>
    <svg
      height="200"
      width="100"
    >
      <g
        transform="translate(0, 40)"
      >
        <g
          class="lucid-Axis"
        >
          <path
            class="lucid-Axis-domain"
            d="M6,150H0V0H6"
          />
          <g
            transform="translate(0, 150)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              0
            </text>
          </g>
          <g
            transform="translate(0, 120)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              20,000
            </text>
          </g>
          <g
            transform="translate(0, 90)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              40,000
            </text>
          </g>
          <g
            transform="translate(0, 60)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              60,000
            </text>
          </g>
          <g
            transform="translate(0, 29.999999999999993)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              80,000
            </text>
          </g>
          <g
            transform="translate(0, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".32em"
              style="text-anchor:start"
              transform="rotate(-30)"
              x="9"
              y="9"
            >
              100,000
            </text>
          </g>
        </g>
      </g>
    </svg>
  </div>
  <div>
    <p>
      left
    </p>
    <svg
      height="200"
      width="100"
    >
      <g
        transform="translate(99, 40)"
      >
        <g
          class="lucid-Axis"
        >
          <path
            class="lucid-Axis-domain"
            d="M-6,150H0V0H-6"
          />
          <g
            transform="translate(0, 150)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              0
            </text>
          </g>
          <g
            transform="translate(0, 120)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              20,000
            </text>
          </g>
          <g
            transform="translate(0, 90)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              40,000
            </text>
          </g>
          <g
            transform="translate(0, 60)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              60,000
            </text>
          </g>
          <g
            transform="translate(0, 29.999999999999993)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              80,000
            </text>
          </g>
          <g
            transform="translate(0, 0)"
          >
            <line
              class="lucid-Axis-tick"
              x2="-6"
              y2="0"
            />
            <text
              class="lucid-Axis-tick-text"
              dy=".71em"
              style="text-anchor:end"
              transform="rotate(-30)"
              x="-9"
              y="-9"
            >
              100,000
            </text>
          </g>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Axis [common] example testing should match snapshot(s) for Left 1`] = `
<svg
  height="200"
  width="50"
>
  <g
    transform="translate(49, 10)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M-6,180H0V0H-6"
      />
      <g
        transform="translate(0, 180)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          0
        </text>
      </g>
      <g
        transform="translate(0, 162)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          10,000
        </text>
      </g>
      <g
        transform="translate(0, 144)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          20,000
        </text>
      </g>
      <g
        transform="translate(0, 125.99999999999999)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          30,000
        </text>
      </g>
      <g
        transform="translate(0, 108)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          40,000
        </text>
      </g>
      <g
        transform="translate(0, 90)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          50,000
        </text>
      </g>
      <g
        transform="translate(0, 72)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          60,000
        </text>
      </g>
      <g
        transform="translate(0, 54.00000000000001)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          70,000
        </text>
      </g>
      <g
        transform="translate(0, 35.99999999999999)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          80,000
        </text>
      </g>
      <g
        transform="translate(0, 17.999999999999996)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          90,000
        </text>
      </g>
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="-6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:end"
          transform=""
          x="-9"
          y="0"
        >
          100,000
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot(s) for Ordinal 1`] = `
<svg
  height="40"
  width="400"
>
  <g
    transform="translate(20, 1)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,6V0H360V6"
      />
      <g
        transform="translate(45, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          a
        </text>
      </g>
      <g
        transform="translate(135, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          b
        </text>
      </g>
      <g
        transform="translate(225, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          c
        </text>
      </g>
      <g
        transform="translate(315, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          d
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot(s) for Right 1`] = `
<svg
  height="200"
  width="50"
>
  <g
    transform="translate(0, 10)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M6,180H0V0H6"
      />
      <g
        transform="translate(0, 180)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          0
        </text>
      </g>
      <g
        transform="translate(0, 162)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          5
        </text>
      </g>
      <g
        transform="translate(0, 144)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          10
        </text>
      </g>
      <g
        transform="translate(0, 125.99999999999999)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          15
        </text>
      </g>
      <g
        transform="translate(0, 108)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          20
        </text>
      </g>
      <g
        transform="translate(0, 90)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          25
        </text>
      </g>
      <g
        transform="translate(0, 72)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          30
        </text>
      </g>
      <g
        transform="translate(0, 54.00000000000001)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          35
        </text>
      </g>
      <g
        transform="translate(0, 35.99999999999999)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          40
        </text>
      </g>
      <g
        transform="translate(0, 17.999999999999996)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          45
        </text>
      </g>
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="6"
          y2="0"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".32em"
          style="text-anchor:start"
          transform=""
          x="9"
          y="0"
        >
          50
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot(s) for Time 1`] = `
<svg
  height="200"
  width="400"
>
  <g
    transform="translate(30, 1)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,6V0H360V6"
      />
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2015
        </text>
      </g>
      <g
        transform="translate(42.51968503937008, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          April
        </text>
      </g>
      <g
        transform="translate(85.51181102362204, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          July
        </text>
      </g>
      <g
        transform="translate(128.97637795275588, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          October
        </text>
      </g>
      <g
        transform="translate(172.44094488188978, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2016
        </text>
      </g>
      <g
        transform="translate(215.43307086614175, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          April
        </text>
      </g>
      <g
        transform="translate(258.4251968503937, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          July
        </text>
      </g>
      <g
        transform="translate(301.8897637795275, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          October
        </text>
      </g>
      <g
        transform="translate(345.35433070866145, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2017
        </text>
      </g>
    </g>
  </g>
  <g
    transform="translate(30, 66.66666666666667)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,6V0H360V6"
      />
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2015
        </text>
      </g>
      <g
        transform="translate(85.51181102362204, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          July
        </text>
      </g>
      <g
        transform="translate(172.44094488188978, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2016
        </text>
      </g>
      <g
        transform="translate(258.4251968503937, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          July
        </text>
      </g>
      <g
        transform="translate(345.35433070866145, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2017
        </text>
      </g>
    </g>
  </g>
  <g
    transform="translate(30, 133.33333333333334)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,6V0H360V6"
      />
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2015
        </text>
      </g>
      <g
        transform="translate(172.44094488188978, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2016
        </text>
      </g>
      <g
        transform="translate(345.35433070866145, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy=".71em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="9"
        >
          2017
        </text>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Axis [common] example testing should match snapshot(s) for Top 1`] = `
<svg
  height="50"
  width="400"
>
  <g
    transform="translate(20, 25)"
  >
    <g
      class="lucid-Axis"
    >
      <path
        class="lucid-Axis-domain"
        d="M0,-6V0H360V-6"
      />
      <g
        transform="translate(0, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          0
        </text>
      </g>
      <g
        transform="translate(72, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          20,000
        </text>
      </g>
      <g
        transform="translate(144, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          40,000
        </text>
      </g>
      <g
        transform="translate(216, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          60,000
        </text>
      </g>
      <g
        transform="translate(288, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          80,000
        </text>
      </g>
      <g
        transform="translate(360, 0)"
      >
        <line
          class="lucid-Axis-tick"
          x2="0"
          y2="-6"
        />
        <text
          class="lucid-Axis-tick-text"
          dy="0em"
          style="text-anchor:middle"
          transform=""
          x="0"
          y="-9"
        >
          100,000
        </text>
      </g>
    </g>
  </g>
</svg>
`;
